--- a/src/main/index.html
+++ b/src/main/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>webpack react配置</title>
+    <title>webpack React</title>
 </head>
 <body>
-<div id="app">
-
-</div>
-<script type="text/javascript" src="bundle.js"></script>
+    <div id="app"></div>
 </body>
 </html>
